k8s-e-ticket-app/k8s/mongo-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-sts
spec:
  serviceName: "eticker-mongodb"
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-pv-storage
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-pv-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "nfs-client"
        resources:
          requests:
            storage: 1Gi
