k8s-e-ticket-app/k8s/svc-be.yaml
apiVersion: v1
kind: Service
metadata:
  name: eticker-be
spec:
  selector:
    app: eticker-be
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7001
