k8s-e-ticket-app/k8s/svc-fe.yaml
apiVersion: v1
kind: Service
metadata:
  name: eticker-fe
spec:
  selector:
    app: eticker-fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
