k8s-e-ticket-app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eticket-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /?(.*)
        backend:
          service:
            name: eticker-fe
            port:
              number: 80
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /be/?(.*)
        backend:
          service:
            name: eticker-be
            port:
              number: 80
